--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -1,9 +1,13 @@
-.projects {
-    & > section {
-        & > section {
-            & > div {
-                text-align: center;
-            }
-        }
-    }
+// .projects {
+//     & > section {
+//         & > section {
+//             & > div {
+//                 text-align: center;
+//             }
+//         }
+//     }
+// }
+
+.projects > section > section > div {
+    text-align: center;
 }
