--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -5,6 +5,7 @@
 
 .carousel {
     max-width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,6 +14,7 @@
     & > a {
         height: 32px;
         aspect-ratio: 1;
+
         border-radius: 2px;
 
         & > img {
@@ -26,17 +28,22 @@
     }
   
     & > .imgs {
-        // margin-block: 55px;
         flex: 1;
+
+        margin: 0;
+        // margin-block: 55px;
+        padding: 0;
+
+        height: fit-content;
+
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
         // column-gap: 80px;
         align-items: center;
+
         list-style: none;
-        padding: 0;
-        margin: 0;
+
         isolation: isolate;
-        height: fit-content;
   
         & .active {
             z-index: 2;
@@ -48,12 +55,14 @@
         & .left {
             border-top-right-radius: 0 !important;
             border-bottom-right-radius: 0 !important;
+
             // box-shadow-right: none;
         }
   
         & .right {
             border-top-left-radius: 0 !important;
             border-bottom-left-radius: 0 !important;
+
             // box-shadow-left: none;
         }
         & :not(.left, .active, .right) {
@@ -62,27 +71,34 @@
 
         & img {
             --time: 250ms;
-            --bg-color: var(--orig-bg-color);
-            max-width: 100%;
             --shadow-size: 25px;
             --shadow-color: var(--orig-bg-color);  
-            box-shadow: var(--shadow-color, var(--orig-bg-color)) 0px 0px var(--shadow-size);
+
+            background-color: var(--orig-bg-color);
+
+            max-width: 100%;
+
             border-radius: 25px;
+
+            box-shadow: var(--shadow-color, var(--orig-bg-color)) 0px 0px var(--shadow-size);
+
             cursor: pointer;
   
             &.hover-in {
                 transition: var(--time) ease-in;
+
                 &.hover {
-                    transition: var(--time) ease-out;
                     border-radius: 10px;
+
+                    transition: var(--time) ease-out;
                 }
             }
         }
     }
   
     * {
-        -webkit-user-select: none; /* Safari */
-        -ms-user-select: none; /* IE 10 and IE 11 */
-        user-select: none; /* Standard syntax */
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 }  
