--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,32 +1,40 @@
 .hero {
-    padding: 0 10vw;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: calc(100% - 20vw);
-    --bg-color: #6c78e5;
+    --padding-inline: 10vw;
+
+    padding: 0 var(--padding-inline);
+
+    width: calc(100% - var(--padding-inline)*2);
+
+    background-color: #6c78e5;
     background-image: url('/assets/header.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
     color: white;
   
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
     &:not(&.fullHeight) {
         min-height: 37.5vw;
     }
     
     &.fullHeight {
-        min-height: calc(100% - 210px);
         flex: 1;
+
+        min-height: calc(100% - 210px);
         align-items: center;
     }
   
     & > div {
+        width: 100%;
+
         display: flex;
         justify-content: center;
         align-items: flex-start;
         flex-direction: column;
-        width: 100%;
 
         & > * {
             max-width: fit-content;
@@ -41,26 +49,32 @@
   
     & h1:not(#menu > h1):not(#whymakethisclub) {
         margin: 0;
-        text-transform: uppercase;
-        font-weight: 400;
-        font-size: 4.5rem;
+
         max-width: 12.89ch;
+
+        font-size: 4.5rem;
+        font-weight: 400;
+        text-transform: uppercase;
     }
     & h2 {
         margin: 0;
-        font-weight: 400;
-        font-size: 2.4rem;
+
         max-width: 30.39ch;
+
+        font-size: 2.4rem;
+        font-weight: 400;
     }
     & h3 {
         margin: 0;
-        font-weight: 400;
-        font-size: 1.2rem;
+
         max-width: 56.59ch;
+
+        font-size: 1.2rem;
+        font-weight: 400;
     }
 
     &:not(.error) > section {
-        --bg: white;
+        background: white;
         color: black;
     }
   }
