--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -1,21 +1,27 @@
 .modal {
-    --bg-color: white;
     --margin: 50px;
-  
-    border: none;
-    height: calc(100% - (var(--margin)*2) + 18px);
-    width: calc(100% - (var(--margin)*2) + 18px);
+
     margin: calc(var(--margin) - 9px);
     padding: 0;
+
+	height: calc(100% - (var(--margin)*2) + 18px);
+    width: calc(100% - (var(--margin)*2) + 18px);
+
+	background-color: white;
     background: transparent;
-    isolation: isolate;
     color: black;
+  
+    border: none;
     border-radius: 25px;
-    transition: 500ms ease-in-out;
+
+	isolation: isolate;
+
+	transition: 500ms ease-in-out;
   
     &::backdrop {
 		width: 100%;
 		height: 100%;
+
 		background-color: var(--orig-bg-color, #1a4276);
 		opacity: 75%;
     }
@@ -31,17 +37,20 @@
     & div {
 		&:not(#top, #bot, #photo) {
 			height: calc(100% - 100px);
+
 			display: flex;
 			justify-content: center;
 		}
 
 		&#top, &#bot {
-			height: 25px;
-			text-align: center;
 			padding: 12.5px;
+
+			height: 25px;
+
+			text-align: center;
 		
 			* {
-				--bg-color: transparent;
+				background-color: transparent;
 			}
 		}  
     }
@@ -50,14 +59,18 @@
 		position: absolute;
 		top: 12.5px;
 		right: 12.5px;
-	/*  margin: 12.5px;  */
+
+		/*  margin: 12.5px;  */
+
 		width: 25px !important;
 		aspect-ratio: 1;
+
 		cursor: pointer;
     }
   
     #photo {
-		--bg-color: white;
+		background-color: white;
+
 		transition: 500ms ease-in;
 
 		&:hover {
