--- a/src/styles/pages/portal.scss
+++ b/src/styles/pages/portal.scss
@@ -1,21 +1,22 @@
 main:is(.portal, #portal) {
+    flex: 1;
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1;
-    width: 100%;
   
     & > #menu {
-        --bg-color: white;
+        margin: 25px;
+        padding: var(--padding) 25px 25px;
+        
+        background-color: white;
         color: black;
     
         width: auto;
         max-width: 100%;
         height: auto;
-        
-        margin: 25px;
-        padding: var(--padding) 25px 25px;
         
         display: flex;
         flex-direction: column;
@@ -25,30 +26,31 @@ main:is(.portal, #portal) {
 }  
 
 .template {
-    --bg-color: white;
-    color: black;
     padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 20px 15px;
+
+    background-color: white;
+    color: black;
   
     * {
-        --bg-color: white;
-        color: black;
+        background-color: inherit;
+        color: inherit;
     }
 }
   
   
 #emailtemplatetext {
-    text-align: center;
-    border-radius: 10px !important;
     margin: 10px;
-    --bg-color: white;
+
+    background-color: white;
     color: black;
+
+    border-radius: 10px !important;
+    text-align: center;
 }
 #emailtemplatetext > * {
-    text-align: center;
-    --bg-color: white !important;
+    background-color: white !important;
     color: black;
+
+    text-align: center;
 }
