--- a/src/pages/members/samantha.astro
+++ b/src/pages/members/samantha.astro
@@ -6,7 +6,7 @@ import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
 var userData = {
   username: 'samantha', 
-  name: 'Samantha (Sam) Wolff',
+  name: 'Samantha Wolff',
   pronunciation: false, 
   email: {
     g4g: false,
