--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -41,37 +41,33 @@ var userData = {
   }, 
   socials: [
     {
-      url: 'https://adarshrkumar.com', 
+      url: 'https://adarshrkumar.dev', 
       name: 'Website', 
     }, 
     {
-      url: 'https://youtube.com/@RockGamerHub', 
+      url: 'https://youtube.com/adarshrkumar', 
       name: 'YouTube', 
     }, 
     {
-      url: 'https://instagram.com/RockGamerAK', 
+      url: 'https://instagram.com/adarshrkumar', 
       name: 'Instagram', 
     }, 
     {
-      url: 'https://threads.net/@RockGamerAK', 
+      url: 'https://threads.net/@adarshrkumar', 
       name: 'Threads', 
     }, 
     {
-      url: 'https://X.com/@RockGamerAK', 
-      name: 'Twitter', 
+      url: 'https://X.com/@adarshrkumar', 
+      name: 'X', 
     }, 
-    {
-      url: 'https://tiktok.com/@RockGamerAK', 
-      name: 'TikTok', 
-    }, 
-    {
-      url: 'https://twitch.tv/RockGamerAK', 
-      name: 'Twitch', 
-    }, 
-    {
-      url: 'https://kick.com/RockGamerAK', 
-      name: 'Kick', 
-    }, 
+    // {
+    //   url: 'https://twitch.tv/RockGamerAK', 
+    //   name: 'Twitch', 
+    // }, 
+    // {
+    //   url: 'https://kick.com/RockGamerAK', 
+    //   name: 'Kick', 
+    // }, 
     {
       url: 'https://discord.com/users/768273827549282305', 
       name: 'Discord'
@@ -85,24 +81,12 @@ var userData = {
       name: 'Threads', 
     }, 
     {
-      url: 'https://instagram.com/akumar.transit', 
-      name: 'Instagram', 
-    }, 
-    {
       url: 'https://instagram.com/akumar.photos', 
       name: 'Instagram', 
     }, 
     {
       url: 'https://X.com/akumarrws', 
-      name: 'Twitter', 
-    }, 
-    {
-      url: 'https://youtube.com/akumarrws', 
-      name: 'YouTube', 
-    }, 
-    {
-      url: 'https://tiktok.com/akumarrws', 
-      name: 'TikTok', 
+      name: 'X', 
     }, 
     {
       url: 'https://discord.com/users/1097241365198409728', 
