--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -10,7 +10,7 @@ const members = [
   // 'Rien (Rick) Gupta', 
   // 'Maya Heiss', 
   'Jeremy Hasan', 
-  'Ĺorelai Hartman', 
+  'Lorelai Hartman', 
   'Beatriz Meneses', 
   'Chloe Mercado', 
   'Esha Mittal', 
