--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -57,10 +57,10 @@ finalDate = `${finalDateS[0]}, ${finalDateS[1]} ${finalDateS[2]}, ${finalDateS[3
 </footer>
 <script is:inline>
 var pageDates = {
-  // members: '04/27/2023'
+  members: '03/25/2024'
 }
 
-var page = location.pathname.substring(1)
+var page = location.pathname.slice(1)
 if (!!page === false) {
   page = 'index'
   // page = 'members'
