--- a/src/pages/members/amelia.astro
+++ b/src/pages/members/amelia.astro
@@ -12,7 +12,7 @@ var userData = {
   }, 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
-    g4g: false,
+    g4g: true,
     dtech: {
       year: 26,
     },
