--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,15 +3,31 @@ import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
 import '../styles/pages/error.scss'
 
-var errorCode = 404
-var errorName = 'Not Found'
-var errorDesc = '<h2>Unfortunatly our website doen not have the page that you were looking for.</h1><h3>Either we never created this page to begin with or we have deleted it.</h3><h3>Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>'
-
 var error = {
-  code: errorCode, 
-  name: errorName, 
-  desc: errorDesc, 
+  code: 404, 
+  name: 'Not Found', 
+  desc: `
+    <h2>Unfortunatly our website doen not have the page that you were looking for.</h1><h3>Either we never created this page to begin with or we have deleted it.</h3><h3>Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
+  `, 
 }
+
+var redirects = [
+  {
+    slug: '/sign-up', 
+    dest: 'https://go.graphics-for-good.com/Sign-Up', 
+  }, 
+  {
+    slug: '/status', 
+    dest: 'https://go.graphics-for-good.com/Status', 
+  }
+]
+
+redirects.forEach(function(redirect, i) {
+  var path = Astro.url.pathname
+  if (path === redirect.slug) {
+    Astro.redirect(redirect.dest)
+  }
+})
 
 ---
 <Layout title="404">
