--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ var error = {
   `, 
 }
 
-var path = Astro.url.pathname
+var path = Astro.request.url
 var redirects = [
   {
     slug: '/sign-up', 
