--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,11 +7,10 @@ var error = {
   code: 404, 
   name: 'Not Found', 
   desc: `
-    <h2>Unfortunatly our website doen not have the page that you were looking for.</h1><h3>Either we never created this page to begin with or we have deleted it.</h3><h3>Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
+    <h2>Unfortunatly our website does not have the page that you were looking for.</h1><h3>Either we never created this page to begin with or we have deleted it.</h3><h3>Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
   `, 
 }
 
-var path = Astro.request.url
 var redirects = [
   {
     slug: '/sign-up', 
@@ -23,12 +22,8 @@ var redirects = [
   }
 ]
 
-redirects.forEach(function(redirect, i) {
-  if (path === redirect.slug) {
-    Astro.redirect(redirect.dest)
-  }
-})
-
+Astro.response.status = error.code;
+Astro.response.statusText = error.name;
 ---
 <Layout title="404">
   <main id="content">
@@ -42,4 +37,12 @@ redirects.forEach(function(redirect, i) {
       </section>
     </Hero>
   </main>
+  <script>
+    var redirectObj = {redirects}
+    redirectObj.forEach(function(redirect, i) {
+      if (location.pathname === redirect.slug) {
+        location.href = redirect.dest
+      }
+    })
+  </script>
 </Layout>
