--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -7,9 +7,9 @@ const { carouselIndex } = Astro.props
     <!-- <img class="left" src="/assets/club_photos/previews/IMG_3853.jpg" draggable="false"> -->
     <!-- <img class="active" src="/assets/club_photos/previews/IMG_4685.jpg" draggable="false"> -->
     <img class="left" src="/assets/club_photos/previews/IMG_0506.jpg" draggable="false">
-    <img class="active" src="/assets/club_photos/previews/IMG_4705.jpg" draggable="false">
-    <img class="right" src="/assets/club_photos/previews/IMG_0496.jpg" draggable="false">
-    <img src="/assets/club_photos/previews/IMG_0498.jpg" draggable="false">
+    <!-- <img class="active" src="/assets/club_photos/previews/IMG_4705.jpg" draggable="false"> -->
+    <img class="active" src="/assets/club_photos/previews/IMG_0496.jpg" draggable="false">
+    <img class="right" src="/assets/club_photos/previews/IMG_0498.jpg" draggable="false">
     <img src="/assets/club_photos/previews/IMG_0499.jpg" draggable="false">
     <img src="/assets/club_photos/previews/IMG_0510.jpg" draggable="false">
     <img src="/assets/club_photos/previews/IMG_0512.jpg" draggable="false">
