--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -56,7 +56,7 @@ main:not(.profile) > * {
     }
 }
 
-@keyframes fade {
+@keyframes split {
     from {
         translate: calc(var(--dir)*100%);
     }
