--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -11,7 +11,7 @@
 
 @mixin splitAnimations {
     animation: split linear both;
-    animation-range: contain var(--split-animation-value) cover var(--split-animation-value);
+    animation-range: cover 0 cover var(--split-animation-value);
 }
   
 
