--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // scroll animation
 $fade-animation-value: 25%;
-$split-animation-value: 0%;
+$split-animation-value: 25px;
 
 // site
 $orig-bg-color: #1a4276;
