--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,7 +16,7 @@ $tiny-split-image-parent-min-height: 0px;
 
 :root {
     --fade-animation-value: #{$fade-animation-value};
-    --split-animation-value: #{$split-animation-value};
+    --split-animation-value: calc((25/var(--dHeight))*100%);
 
     --orig-bg-color: #{$orig-bg-color};
     background-color: var(--orig-bg-color);
